# rte-rrtmgp-cpp

./: .gitignore  CMakeLists.txt  mods
allsky/: allsky_run.py  make_links.sh
config/: annuna.cmake  snellius.cmake
include/: Aerosol_optics.h  Array.h  Cloud_optics.h  Fluxes.h  Gas_optics.h  Gas_optics_rrtmgp.h  Optical_props.h  Raytracer.h  Raytracer_bw.h  Rte_lw.h  Rte_sw.h  Source_functions.h  gpoint_kernel_launcher_cuda.h  optical_props_kernel_launcher_cuda.h  raytracer_kernel.h  raytracer_kernels.h  raytracer_kernels_bw.h  rrtmgp_kernel_launcher_cuda.h  rte_kernel_launcher_cuda.h  tools_gpu.h
include_test/: Radiation_solver.h  Radiation_solver_bw.h
rcemip/: compare.py  test_rcemip_input.py  test_rcemip_input_3d.py  test_rte_rrtmgp  test_rte_rrtmgp_gpu
src/: Aerosol_optics.cpp
src_cuda/: .Gas_optics_rrtmgp.cu.swo  Cloud_optics.cu  Fluxes.cu  Gas_optics_rrtmgp.cu  Optical_props.cu  Rte_lw.cu  Rte_sw.cu  Source_functions.cu
src_kernels_cuda/: .gas_optics_kernels.cu.swp  CMakeLists.txt  gas_optics_kernel_launchers.cu  gas_optics_kernels.cu  gpoint_kernel_launchers.cu  gpoint_kernels.cu  optical_props_kernel_launchers.cu  optical_props_kernels.cu  rte_solver_kernel_launchers.cu  rte_solver_kernels.cu
src_raytracer_cuda/: CMakeLists.txt  Raytracer.cu  Raytracer_bw.cu  raytracer_kernels.cu  raytracer_kernels_bw.cu
src_test/: CMakeLists.txt  Radiation_solver.cu  Radiation_solver_bw.cu  raytracer_3d_bw.cu  raytracer_3d_io.cu  test_rte_rrtmgp.cu  test_rte_rrtmgp_3d.cu  test_rte_rrtmgp_bw.cu
